# marcy-dice-engine

./: .dockerignore  .gitignore  CLAUDE.md  CODE_STANDARDS.md  Dockerfile  PLANS.md  README.md  pyproject.toml
docs/: capture_screenshots.py
docs/notes/: 2026-06-26-phase1-foundation.md  wallet-model.md
examples/: hedged_dp_place68.py  simulate_strategies.py
src/craps_api/: __init__.py  app.py  board.py  runner.py  session_store.py
src/craps_api/static/: style.css
src/craps_api/templates/: _board.html  index.html
src/craps_engine/: __init__.py  dice.py  money.py  montecarlo.py  play.py  portfolio.py  registry.py  ruleset.py  session.py  specs.py  state.py  strategy.py
src/craps_engine/bets/: __init__.py  base.py  come.py  line.py  odds.py  place.py
src/craps_tui/: __init__.py  __main__.py  app.py  golden.py  viewmodel.py
tests/: __init__.py  test_api.py  test_bet_base.py  test_bet_lifecycle.py  test_come_bets.py  test_dice.py  test_example_hedge.py  test_example_simulation.py  test_golden.py  test_htmx.py  test_line_bets.py  test_money.py  test_montecarlo.py  test_odds_bets.py  test_place_bets.py  test_play.py  test_portfolio.py  test_registry.py  test_ruleset.py  test_session.py  test_specs.py  test_state.py  test_strategy.py  test_tui_smoke.py  test_viewmodel.py
