[project]
name = "craps-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jordan", email = "jordantotten@google.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
craps-tui = "craps_tui.__main__:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# Sync every dev-time group by default so bare `uv run <cmd>` just works:
# `craps-tui` needs the `ui` group (textual) and the quality gate needs `test`.
# These are dependency-GROUPS, so they never ship to consumers of the package
# (`[project.dependencies]` stays empty) — the published engine remains
# stdlib-only regardless of what is synced into the local dev venv.
default-groups = ["dev", "test", "ui"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.54",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
ui = [
    "textual>=8.2.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]
"examples/**" = ["T201", "INP001"]
"src/craps_tui/**" = ["INP001"]

[tool.pytest.ini_options]
addopts = "--cov=craps_engine --cov=craps_tui --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.terminal]
error-on-warning = true
